# FacialFeaturesRecognizer

./: .gitignore  CMakeLists.txt  README.md  auto_tasks.sh  main.cpp  results_log.txt
data/: input_params.yml
data/models/: cv2_svm_Age_model.yml  cv2_svm_Emotion_model.yml  cv2_svm_Gender_model.yml  cv4_svm_Gender_model.yml
doc/: FacialFeaturesRecognizer.doxyfile  seq_diagram.dox
inc/: AgeRecognizer.h  BaseRecognizer.h  EmotionRecognizer.h  FeaturesRecognizer.h  GenderRecognizer.h  agerecognizer.h  baserecognizer.h  emotionrecognizer.h  featuresrecognizer.h  ffr_precomp.h  genderrecognizer.h  logger.h
src/: AgeRecognizer.cpp  BaseRecognizer.cpp  EmotionRecognizer.cpp  FeaturesRecognizer.cpp  GenderRecognizer.cpp  agerecognizer.cpp  baserecognizer.cpp  emotionrecognizer.cpp  featuresrecognizer.cpp  genderrecognizer.cpp
test/: test_AgeRecognizer.cpp  test_BaseRecognizer.cpp  test_EmotionRecognizer.cpp  test_FeaturesRecognizer.cpp  test_GenderRecognizer.cpp  test_agerecognizer.cpp  test_baserecognizer.cpp  test_emotionrecognizer.cpp  test_featuresrecognizer.cpp  test_func.cpp  test_genderrecognizer.cpp  test_main.cpp  test_precomp.hpp
util/: CMakeLists.txt  example_cpp_train_HOG.cpp  example_cpp_train_HOG.h  py_ffr_util.py  py_test_svm_single_img.py  py_train_save_svm_model.py
